k8s/jenkins-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30001
  externalIPs: 
    - 10.0.0.158
  selector:
    app: jenkins

---

apiVersion: v1
kind: Service
metadata:
  name: jenkins-jnlp
  namespace: jenkins
spec:
  type: NodePort
  ports:
    - port: 50000
      targetPort: 50000
      nodePort: 30009
  selector:
    app: jenkins
